# youtube-transcript-mcp-server

./: README.md  package.json  pyproject.toml  requirements.txt  simple_server.py
src/youtube_transcript_mcp/: __init__.py  transcript_tools.py  utils.py
